commiting all latest changes, validations and slash commands
